kubernetes/booking.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: online-event-booking-munhim
  labels:
    app: booking-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
        - name: booking-service
          image: abdulmunhim/cs4067-assignment-02-i221021-munhim-booking-service:latest
          ports:
            - containerPort: 8002
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: online-event-booking-munhim
  labels:
    app: booking-service
spec:
  selector:
    app: booking-service
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
  type: ClusterIP
