kubernetes/deployment-service-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
  namespace: online-event-booking-abdullah-aslam
  labels:
    app: frontend-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      containers:
        - name: frontend-service
          image: abdullahaslam007/frontend-service:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
            requests:
              cpu: "250m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: online-event-booking-abdullah-aslam
spec:
  type: LoadBalancer
  selector:
    app: frontend-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
