kubernetes/deployment-service-notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: online-event-booking-abdullah-aslam
  labels:
    app: notification-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: abdullahaslam007/notification-service:latest
          ports:
            - containerPort: 8003
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: online-event-booking-abdullah-aslam
spec:
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
  type: ClusterIP
