kubernetes/event.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
  namespace: online-event-booking-munhim
  labels:
    app: event-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
        - name: event-service
          image: abdulmunhim/cs4067-assignment-02-i221021-munhim-event-service:latest
          ports:
            - containerPort: 8001
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: online-event-booking-munhim
  labels:
    app: event-service
spec:
  selector:
    app: event-service
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  type: ClusterIP
